fixed platform text alignment

--- a/client/assets/stylesheets/pages/_apps.scss
+++ b/client/assets/stylesheets/pages/_apps.scss
@@ -249,6 +249,7 @@
     position: absolute;
     bottom: 20px;
     width: 100%;
+    margin-left: -14px;
   }
   img {
     margin-top: 30px;
